Inline simple string helpers